[tool.poetry]
name = "draft_kings"
version = "3.0.0"
description = "A client to access data on draftkings.com"
authors = ["Jae Bradley <jae.b.bradley@gmail.com>"]
maintainers = ["Jae Bradley <jae.b.bradley@gmail.com>"]
license = "MIT"
keywords = ["Daily Fantasy Sports", "DraftKings"]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]
repository = "https://github.com/jaebradley/draftkings_client"
homepage = "https://jaebradley.github.io/draftkings_client"
documentation= "https://jaebradley.github.io/draftkings_client"
readme = "README.md"
exclude = [
    "tests",
    "docs",
    "mkdocs.yml",
    ".github",
    ".pytest_cache",
    ".coveragerc",
    ".pylintrc"
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.20.0"
marshmallow = "^3.9.1"
marshmallow-enum = "^1.5.1"

[tool.poetry.dev-dependencies]
coverage = "^5.3"
mkdocs = "^1.1.2"
mkdocs-material = "^5.3.3"
pymdown-extensions = "^7.1"
pytest = "^6.1.2"
pylint = "^2.6.0"

[tool.poetry.urls]
issues = "https://github.com/jaebradley/draftkings_client/issues"
pull_requests = "https://github.com/jaebradley/draftkings_client/pull_requests"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"