[tool.poetry]
name = "draft_kings"
version = "3.2.0"
description = "A client to access data on draftkings.com"
authors = ["James Cunningham <j.cunnez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
requests = "^2.20.0"
pydantic = "^2.0.3"
pathlib = "^1.0.1"
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = {extras = ["d"], version = "^23.7.0"}
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
mypy = "^1.4.1"
pytest-mock = "^3.12.0"
requests-mock = "^1.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
#python_version = "3.11.4"
plugins = "pydantic.mypy"
disallow_untyped_defs = true

#[tool.pydantic-mypy]
